fix weather-info display alignment

--- a/public/styles/destination.css
+++ b/public/styles/destination.css
@@ -80,3 +80,8 @@
 .exchBox {
     margin: auto;
 }
+
+.current {
+     text-align: center;
+
+}
